redirecionei todas rotas para o login page

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,7 +12,7 @@
         <h1>Sistema de Estoque</h1>
         <nav>
             <ul>
-                <li><a target="_blank" href="estoque.html">Produtos</a></li>
+                <li><a href="estoque.html">Produtos</a></li>
                 <li><a href="login.html">Sair</a></li>
             </ul>
         </nav>
